--- a/css/styles-home-page.css
+++ b/css/styles-home-page.css
@@ -61,6 +61,7 @@ body {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
+	transform: translate(0, -1px);
 }
 
 /* BANNER TEXT */
@@ -216,10 +217,20 @@ h1 span {
 
 /************************************ INDUSTRIES *************************************/
 
+#industry-gallery .industry-button:hover{
+	box-shadow: 0 10px 20px 3px rgb(232, 232, 232) !important;
+	transition: box-shadow 0.35s;
+}
+
 .gallery-text {
 	font-family: var(--ff-open-sans);
 	color: black;
 	font-size: 18px;
+}
+
+#industry-gallery .gallery-text:hover{
+	color: var(--clr-signode-red);
+	text-decoration: none;
 }
 
 /************************************ ANIMATED STATS *************************************/
