--- a/partials/navbar-one.html
+++ b/partials/navbar-one.html
@@ -36,10 +36,10 @@
 			</span>
 	
 			<!-- socials -->
-			<a class="socials navbar-brand">
-				<i class="fa-brands fa-linkedin"></i>
-				<i class="fa-brands fa-youtube"></i>
-			</a>
+			<span class="socials navbar-brand">
+				<a href="https://www.linkedin.com/company/signode/" target="_blank" class="text-reset"> <i class="fa-brands fa-linkedin"></i></a>
+				<a href="https://www.youtube.com/user/SignodeVideoLibrary" target="_blank" class="text-reset"><i class="fa-brands fa-youtube"></i></a>
+			</span>
 		</div>
 	</nav>
     
