--- a/partials/navbar-two.html
+++ b/partials/navbar-two.html
@@ -90,42 +90,42 @@
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="careers.html">Beverage</a>
+                                <a class="dropdown-item" href="beverage.html">Beverage</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="about.html">Fiber & Textile</a>
+                                <a class="dropdown-item" href="fiber.html">Fiber & Textile</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="brands.html">Construction</a>
+                                <a class="dropdown-item" href="construction.html">Construction</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="careers.html">Wood Products</a>
+                                <a class="dropdown-item" href="wood.html">Wood Products</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="careers.html">Printing & Mail</a>
+                                <a class="dropdown-item" href="printing.html">Printing & Mail</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="about.html">Distribution</a>
+                                <a class="dropdown-item" href="distribution.html">Distribution</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="brands.html">Bagged Products</a>
+                                <a class="dropdown-item" href="bagged.html">Bagged Products</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="careers.html">General Manufacturing <br> & Engineering</a>
+                                <a class="dropdown-item" href="eng.html">General Manufacturing <br> & Engineering</a>
                             </li>
                         </ul>
                     </li>
