--- a/css/styles-industries-page.css
+++ b/css/styles-industries-page.css
@@ -51,8 +51,18 @@
 
 /************************************ INDUSTRIES *************************************/
 
+#industry-gallery .industry-button:hover{
+	box-shadow: 0 10px 20px 3px rgb(232, 232, 232) !important;
+	transition: box-shadow 0.35s;
+}
+
 .gallery-text {
 	font-family: var(--ff-open-sans);
 	color: black;
 	font-size: 18px;
+}
+
+#industry-gallery .gallery-text:hover{
+	color: var(--clr-signode-red);
+	text-decoration: none;
 }
