--- a/partials/navbar-two.html
+++ b/partials/navbar-two.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- external stylesheet -->
-    <link rel="stylesheet" href="css/styles-partials.css" />
+    <link rel="stylesheet" href="../css/styles-partials.css" />
 
     <title>Signode Canada</title>
     
@@ -19,8 +19,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark ml-auto sticky-top" id="navbar-two-custom"> 
         <div class="container">
             <!-- logo -->
-            <a class="navbar-brand pr-4" id="hide-brand-logo" href="index.html" >
-                <img src="images/partials/signode-logo.png" alt="" width="180"/>
+            <a class="navbar-brand pr-4" id="hide-brand-logo" href="../index.html" >
+                <img src="../images/partials/signode-logo.png" alt="" width="180"/>
             </a>
     
             <!-- responsive navigation menu -->
@@ -43,89 +43,89 @@
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="about.html">About Us</a>
+                                <a class="dropdown-item" href="../pages-company/about.html">About Us</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="brands.html">Brands</a>
+                                <a class="dropdown-item" href="../pages-company/brands.html">Brands</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="careers.html">Careers</a>
+                                <a class="dropdown-item" href="../pages-company/careers.html">Careers</a>
                             </li>
                         </ul>
                     </li>
     
                     <!-- navbar item -->
                     <li class="nav-item dropdown pr-4">
-                        <a class="nav-link dropdown-toggle" href="industries.html" id="navbarDropdown" role="button" aria-expanded="false"> Industries </a>
+                        <a class="nav-link dropdown-toggle" href="../industries.html" id="navbarDropdown" role="button" aria-expanded="false"> Industries </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="metals.html">Metals</a>
+                                <a class="dropdown-item" href="../pages-industries/metals.html">Metals</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="paper.html">Corrugated & Paper</a>
+                                <a class="dropdown-item" href="../pages-industries/paper.html">Corrugated & Paper</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="empty-container.html">Empty Container</a>
+                                <a class="dropdown-item" href="../pages-industries/empty-container.html">Empty Container</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="pharma.html">Pharma</a>
+                                <a class="dropdown-item" href="../pages-industries/pharma.html">Pharma</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="food.html">Food</a>
+                                <a class="dropdown-item" href="../pages-industries/food.html">Food</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="beverage.html">Beverage</a>
+                                <a class="dropdown-item" href="../pages-industries/beverage.html">Beverage</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="fiber.html">Fiber & Textile</a>
+                                <a class="dropdown-item" href="../pages-industries/fiber.html">Fiber & Textile</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="construction.html">Construction</a>
+                                <a class="dropdown-item" href="../pages-industries/construction.html">Construction</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="wood.html">Wood Products</a>
+                                <a class="dropdown-item" href="../pages-industries/wood.html">Wood Products</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="printing.html">Printing & Mail</a>
+                                <a class="dropdown-item" href="../pages-industries/printing.html">Printing & Mail</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="distribution.html">Distribution</a>
+                                <a class="dropdown-item" href="../pages-industries/distribution.html">Distribution</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="bagged.html">Bagged Products</a>
+                                <a class="dropdown-item" href="../pages-industries/bagged.html">Bagged Products</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="eng.html">General Manufacturing <br> & Engineering</a>
+                                <a class="dropdown-item" href="../pages-industries/eng.html">General Manufacturing <br> & Engineering</a>
                             </li>
                         </ul>
                     </li>
@@ -202,15 +202,15 @@
                 </li>
 
                     <li class="nav-item pr-4">
-                        <a class="nav-link active hover-border" aria-current="page" href="services.html">Services</a>
+                        <a class="nav-link active hover-border" aria-current="page" href="../services.html">Services</a>
                     </li>
 
                     <li class="nav-item pr-4">
-                        <a class="nav-link active hover-border" aria-current="page" href="automation.html">Automation</a>
+                        <a class="nav-link active hover-border" aria-current="page" href="../automation.html">Automation</a>
                     </li>
     
                     <li class="nav-item pr-4">
-                        <a class="nav-link active hover-border" aria-current="page" href="contact.html">Contact</a>
+                        <a class="nav-link active hover-border" aria-current="page" href="../contact.html">Contact</a>
                     </li>
       
                 </ul>
