finished sale products page

--- a/css/styles-partials.css
+++ b/css/styles-partials.css
@@ -153,6 +153,12 @@
 	border: none;
 }
 
+#navbar-two-custom .navbar-toggler:focus {
+	/* removes built in styling of a blue outline around toggler button */
+	outline: none;
+	border: 0.5px solid white;
+}
+
 .custom-toggler .navbar-toggler-icon {
 	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2.5' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
