--- a/partials/navbar-two.html
+++ b/partials/navbar-two.html
@@ -198,21 +198,27 @@
                             <a class="dropdown-item" href="brands.html">Transport</a>
                         </li>
 
+                        <!-- dropdown menu item -->
+                        <li>
+                            <a class="dropdown-item" href="../services.html">Services</a>
+                        </li>
+
+                        <!-- dropdown menu item -->
+                        <li>
+                            <a class="dropdown-item" href="../automation.html">Automation</a>
+                        </li>
+
                     </ul>
                 </li>
 
                     <li class="nav-item pr-4">
-                        <a class="nav-link active hover-border" aria-current="page" href="../services.html">Services</a>
-                    </li>
-
-                    <li class="nav-item pr-4">
-                        <a class="nav-link active hover-border" aria-current="page" href="../automation.html">Automation</a>
-                    </li>
-    
-                    <li class="nav-item pr-4">
                         <a class="nav-link active hover-border" aria-current="page" href="../contact.html">Contact</a>
                     </li>
       
+                    <li class="nav-item pr-4">
+                        <a class="nav-link active hover-border" aria-current="page" href="../sale.html">Sale</a>
+                    </li>
+
                 </ul>
 
             <!-- ******************************* SEARCH BOXES ************************************** -->
