--- a/css/styles-services-page.css
+++ b/css/styles-services-page.css
@@ -77,6 +77,17 @@ body {
 	margin-bottom: 20px;
 }
 
+/************************************ VIDEO *************************************/
+
+.venobox-placeholder-image{
+	border: 1px solid rgb(204, 204, 204);
+	border-radius: 10px;
+}
+
+.venobox-placeholder-image:hover{
+	filter: brightness(85%);
+}
+
 /************************************ SERVICES *************************************/
 
 .service-heading{
@@ -95,3 +106,4 @@ body {
 .service-image img{
 	object-fit: cover;
 }
+
