added play button and hover effects for services page video

--- a/css/styles-services-page.css
+++ b/css/styles-services-page.css
@@ -79,13 +79,31 @@ body {
 
 /************************************ VIDEO *************************************/
 
+.venobox{
+	position: relative;
+}
+
+.play-button{
+	position: absolute;
+	font-size: 75px;
+	/* color: var(--clr-signode-red); */
+	color: white;
+	margin: 0;
+	top: 50%; 
+	left: 50%; 
+	/* the transformation accounts for the width and height of the icon itself */
+	transform: translate(-50%,-50%);
+
+}
+
 .venobox-placeholder-image{
 	border: 1px solid rgb(204, 204, 204);
 	border-radius: 10px;
 }
 
-.venobox-placeholder-image:hover{
-	filter: brightness(85%);
+.venobox:hover .venobox-placeholder-image{
+	filter: brightness(60%);
+	transition: filter 0.2s;
 }
 
 /************************************ SERVICES *************************************/
