organizing files progress

--- a/partials/navbar-two.html
+++ b/partials/navbar-two.html
@@ -32,13 +32,15 @@
             <div class="collapse navbar-collapse ml-auto justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto mb-2 mb-lg-0" id="hide-navbar-items">
     
-                    <!-- navbar item -->
+                    <!-- ******************************* COMPANY ************************************** -->
+
                     <li class="nav-item dropdown pr-4">
 
                         <!-- to hold dropdown menu open when clicking a navlink: -->
                         <!-- <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false"> Company </a> -->
 
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" aria-expanded="false"> Company </a>
+                        <!-- <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false"> Company </a> -->
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
                             <!-- dropdown menu item -->
@@ -57,6 +59,8 @@
                             </li>
                         </ul>
                     </li>
+
+                    <!-- ******************************* INDUSTRIES ************************************** -->
     
                     <!-- navbar item -->
                     <li class="nav-item dropdown pr-4">
@@ -65,108 +69,72 @@
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="../pages-industries/metals.html">Metals</a>
+                                <a class="dropdown-item" href="/pages-industries/metals.html">Metals</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="../pages-industries/paper.html">Corrugated & Paper</a>
+                                <a class="dropdown-item" href="/pages-industries/corrugated-and-paper.html">Corrugated & Paper</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="../pages-industries/empty-container.html">Empty Container</a>
+                                <a class="dropdown-item" href="/pages-industries/empty-container.html">Empty Container</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="../pages-industries/pharma.html">Pharma</a>
+                                <a class="dropdown-item" href="/pages-industries/pharma.html">Pharma</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="../pages-industries/food.html">Food</a>
+                                <a class="dropdown-item" href="/pages-industries/food.html">Food</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="../pages-industries/beverage.html">Beverage</a>
+                                <a class="dropdown-item" href="/pages-industries/beverage.html">Beverage</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="../pages-industries/fiber.html">Fiber & Textile</a>
+                                <a class="dropdown-item" href="/pages-industries/fiber-and-textile.html">Fiber & Textile</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="../pages-industries/construction.html">Construction</a>
+                                <a class="dropdown-item" href="/pages-industries/construction.html">Construction</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="../pages-industries/wood.html">Wood Products</a>
+                                <a class="dropdown-item" href="/pages-industries/wood-products.html">Wood Products</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="../pages-industries/printing.html">Printing & Mail</a>
+                                <a class="dropdown-item" href="/pages-industries/printing-and-mail.html">Printing & Mail</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="../pages-industries/distribution.html">Distribution</a>
+                                <a class="dropdown-item" href="/pages-industries/distribution.html">Distribution</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="../pages-industries/bagged.html">Bagged Products</a>
+                                <a class="dropdown-item" href="/pages-industries/bagged-products.html">Bagged Products</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="../pages-industries/eng.html">General Manufacturing <br> & Engineering</a>
+                                <a class="dropdown-item" href="/pages-industries/general-manufacturing-and-engineering.html">General Manufacturing <br> & Engineering</a>
                             </li>
                         </ul>
                     </li>
-    
-                   <!-- navbar item -->
-                   <li class="nav-item dropdown pr-4">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" aria-expanded="false"> Products </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-                        <!-- dropdown menu item -->
-                        <li>
-                            <a class="dropdown-item" href="about.html">Case Packaging</a>
-                        </li>
-
-                        <!-- dropdown menu item -->
-                        <li>
-                            <a class="dropdown-item" href="brands.html">Protective</a>
-                        </li>
-
-                        <!-- dropdown menu item -->
-                        <li>
-                            <a class="dropdown-item" href="careers.html">Stapling Systems</a>
-                        </li>
-
-                        <!-- dropdown menu item -->
-                        <li>
-                            <a class="dropdown-item" href="about.html">Strapping Systems</a>
-                        </li>
-
-                        <!-- dropdown menu item -->
-                        <li>
-                            <a class="dropdown-item" href="brands.html">Stretch Systems</a>
-                        </li>
-
-                        <!-- dropdown menu item -->
-                        <li>
-                            <a class="dropdown-item" href="careers.html">Warehouse Automation</a>
-                        </li>
-
-                    </ul>
-                </li>
+                    <!-- ******************************* SOLUTIONS ************************************** -->
 
                 <!-- navbar item -->
                 <li class="nav-item dropdown pr-4">
@@ -211,6 +179,51 @@
                     </ul>
                 </li>
 
+
+                    <!-- ******************************* PRODUCTS ************************************** -->
+    
+                   <!-- navbar item -->
+                   <li class="nav-item dropdown pr-4">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" aria-expanded="false"> Products </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+
+                        <!-- dropdown menu item -->
+                        <li>
+                            <a class="dropdown-item" href="about.html">Case Packaging</a>
+                        </li>
+
+                        <!-- dropdown menu item -->
+                        <li>
+                            <a class="dropdown-item" href="brands.html">Protective</a>
+                        </li>
+
+                        <!-- dropdown menu item -->
+                        <li>
+                            <a class="dropdown-item" href="careers.html">Stapling Systems</a>
+                        </li>
+
+                        <!-- dropdown menu item -->
+                        <li>
+                            <a class="dropdown-item" href="about.html">Strapping Systems</a>
+                        </li>
+
+                        <!-- dropdown menu item -->
+                        <li>
+                            <a class="dropdown-item" href="brands.html">Stretch Systems</a>
+                        </li>
+
+                        <!-- dropdown menu item -->
+                        <li>
+                            <a class="dropdown-item" href="careers.html">Warehouse Automation</a>
+                        </li>
+
+                    </ul>
+                </li>
+
+                <li class="nav-item pr-4">
+                    <a class="nav-link active hover-border" aria-current="page" href="../contact.html">Automation</a>
+                </li>
+                
                     <li class="nav-item pr-4">
                         <a class="nav-link active hover-border" aria-current="page" href="../contact.html">Contact</a>
                     </li>
