--- a/partials/footer.html
+++ b/partials/footer.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- external stylesheet -->
-    <link rel="stylesheet" href="css/styles-partials.css" />
+    <link rel="stylesheet" href="/css/styles-partials.css" />
 
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
@@ -28,7 +28,7 @@
                     <!-- Grid column 1 -->
                     <div class="col-md-12 col-lg-3 col-xl-4 mb-md-3 mx-auto">
                         <!-- Signode Logo & Description -->
-                        <img src="../images/partials/signode-logo.png" class="img-fluid mb-4" alt="Signode Logo">
+                        <img src="/images/partials/signode-logo.png" class="img-fluid mb-4" alt="Signode Logo">
                         <p class="md-screen">Transit Packaging Division of <a href="https://www.crowncork.com/" target="_blank" class="hyperlink text-reset" >Crown Holdings, Inc.</a> <br>Signode is a leading manufacturer of a broad spectrum of transit packaging consumables, software, and equipment.</p>
                         <p class="other-screen">Transit Packaging Division of <a href="https://www.crowncork.com/" target="_blank" class="hyperlink text-reset" >Crown Holdings, Inc.</a></p>
                         <p class="other-screen">Signode is a leading manufacturer of a broad spectrum of transit packaging consumables, software, and equipment.</p>
