--- a/partials/navbar-two.html
+++ b/partials/navbar-two.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- external stylesheet -->
-    <link rel="stylesheet" href="../css/styles-partials.css" />
+    <link rel="stylesheet" href="/css/styles-partials.css" />
 
     <title>Signode Canada</title>
     
@@ -19,8 +19,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark ml-auto sticky-top" id="navbar-two-custom"> 
         <div class="container">
             <!-- logo -->
-            <a class="navbar-brand pr-4" id="hide-brand-logo" href="../index.html" >
-                <img src="../images/partials/signode-logo.png" alt="" width="180"/>
+            <a class="navbar-brand pr-4" id="hide-brand-logo" href="/index.html" >
+                <img src="/images/partials/signode-logo.png" alt="" width="180"/>
             </a>
     
             <!-- responsive navigation menu -->
@@ -45,17 +45,17 @@
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="../pages-company/about.html">About Us</a>
+                                <a class="dropdown-item" href="/pages-company/about.html">About Us</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="../pages-company/brands.html">Brands</a>
+                                <a class="dropdown-item" href="/pages-company/brands.html">Brands</a>
                             </li>
 
                             <!-- dropdown menu item -->
                             <li>
-                                <a class="dropdown-item" href="../pages-company/careers.html">Careers</a>
+                                <a class="dropdown-item" href="/pages-company/careers.html">Careers</a>
                             </li>
                         </ul>
                     </li>
@@ -138,7 +138,7 @@
 
                 <!-- navbar item -->
                 <li class="nav-item dropdown pr-4">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" aria-expanded="false"> Solutions </a>
+                    <a class="nav-link dropdown-toggle" href="/solutions.html" id="navbarDropdown" role="button" aria-expanded="false"> Solutions </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
                         <!-- dropdown menu item -->
@@ -221,15 +221,15 @@
                 </li>
 
                 <li class="nav-item pr-4">
-                    <a class="nav-link active hover-border" aria-current="page" href="../contact.html">Automation</a>
+                    <a class="nav-link active hover-border" aria-current="page" href="/automation.html">Automation</a>
                 </li>
                 
                     <li class="nav-item pr-4">
-                        <a class="nav-link active hover-border" aria-current="page" href="../contact.html">Contact</a>
+                        <a class="nav-link active hover-border" aria-current="page" href="/contact.html">Contact</a>
                     </li>
       
                     <li class="nav-item pr-4">
-                        <a class="nav-link active hover-border" aria-current="page" href="../sale.html">Sale</a>
+                        <a class="nav-link active hover-border" aria-current="page" href="/sale.html">Sale</a>
                     </li>
 
                 </ul>
