--- a/partials/navbar-two.html
+++ b/partials/navbar-two.html
@@ -158,22 +158,22 @@
 
                         <!-- dropdown menu item -->
                         <li>
-                            <a class="dropdown-item" href="about.html">Warehouse</a>
+                            <a class="dropdown-item" href="/about.html">Warehouse</a>
                         </li>
 
                         <!-- dropdown menu item -->
                         <li>
-                            <a class="dropdown-item" href="brands.html">Transport</a>
+                            <a class="dropdown-item" href="/brands.html">Transport</a>
                         </li>
 
                         <!-- dropdown menu item -->
                         <li>
-                            <a class="dropdown-item" href="../services.html">Services</a>
+                            <a class="dropdown-item" href="/pages-solutions/services.html">Services</a>
                         </li>
 
                         <!-- dropdown menu item -->
                         <li>
-                            <a class="dropdown-item" href="../automation.html">Automation</a>
+                            <a class="dropdown-item" href="/automation.html">Automation</a>
                         </li>
 
                     </ul>
@@ -220,9 +220,10 @@
                     </ul>
                 </li>
 
-                <li class="nav-item pr-4">
-                    <a class="nav-link active hover-border" aria-current="page" href="/automation.html">Automation</a>
-                </li>
+                    <li class="nav-item pr-4">
+                        <a class="nav-link active hover-border" aria-current="page" href="/automation.html">Automation</a>
+                    </li>
+  
                 
                     <li class="nav-item pr-4">
                         <a class="nav-link active hover-border" aria-current="page" href="/contact.html">Contact</a>
