about page photos

--- a/css/styles-about-page.css
+++ b/css/styles-about-page.css
@@ -68,7 +68,7 @@
 /************************************ VALUES *************************************/
 
 #values-section{
-	background-image: url("../images/about-page/values-background.png");
+	background-image: url("/images/about-page/truck-background.png");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
