--- a/css/styles-home-page.css
+++ b/css/styles-home-page.css
@@ -170,7 +170,7 @@ h1 span {
 /************************************ SOLUTIONS *************************************/
 
 #solutions-section{
-	background-image: url("../images/home-page/solutions-background.jpg");
+	background-image: url("/images/home-page/metal-strap-background.png");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
